build: Kotlin 2.3.20-RC3 사용을 위한 변경
  - language, api version 을 2.3 맞춤
  - `Uuid.generateV7()` 사용